--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="./src/index.css">
     <title>Vite + React</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body class = "h-lvh">
+    <div id="root" class = "min-h-full"></div>
     <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
